--- a/processor_arm_expections.qsf
+++ b/processor_arm_expections.qsf
@@ -42,7 +42,7 @@ set_global_assignment -name DEVICE EP4CE22F17C6
 set_global_assignment -name TOP_LEVEL_ENTITY processor_arm
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "18:16:13  SEPTEMBER 09, 2024"
-set_global_assignment -name LAST_QUARTUS_VERSION "20.1.0 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "20.1.1 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
@@ -62,10 +62,10 @@ set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH processor_tb -s
 set_global_assignment -name EDA_TEST_BENCH_NAME processor_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id processor_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME processor_tb -section_id processor_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE "test-benches/processor_tb.sv" -section_id processor_tb
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name EDA_TEST_BENCH_NAME maindec_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id maindec_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME maindec_tb -section_id maindec_tb
+set_global_assignment -name SYSTEMVERILOG_FILE "test-benches/maindec_tb.sv"
 set_global_assignment -name SYSTEMVERILOG_FILE modulos/maindec.sv
 set_global_assignment -name SYSTEMVERILOG_FILE modulos/writeback.sv
 set_global_assignment -name SYSTEMVERILOG_FILE modulos/sl2.sv
@@ -90,4 +90,9 @@ set_global_assignment -name SYSTEMVERILOG_FILE modulos/comp_n.sv
 set_global_assignment -name SYSTEMVERILOG_FILE modulos/aludec.sv
 set_global_assignment -name SYSTEMVERILOG_FILE modulos/alu.sv
 set_global_assignment -name SYSTEMVERILOG_FILE modulos/adder.sv
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name EDA_TEST_BENCH_FILE "test-benches/processor_tb.sv" -section_id processor_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE "test-benches/maindec_tb.sv" -section_id maindec_tb
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
